Update README file

--- a/src/style.css
+++ b/src/style.css
@@ -1,75 +1,69 @@
 html,
 body {
-    width: 80%;
-    margin: auto;
-    position: fixed;
-    top: 20%;
-    left: 30%;
-    transform: translate(-20%, -30%);
+  width: 80%;
+  margin: auto;
+  position: fixed;
+  top: 20%;
+  left: 30%;
+  transform: translate(-20%, -30%);
 }
 
 .heading {
-    text-align:start;
+  text-align: start;
 }
 
 .main-content {
-    display: grid;
-    grid-template-columns: auto auto;
-    justify-content: center;
-    align-items: center;
-    gap: 64px;
-    padding: 20px;
-    max-width: fit-content;
+  display: grid;
+  grid-template-columns: auto auto;
+  justify-content: center;
+  align-items: center;
+  gap: 64px;
+  padding: 20px;
+  max-width: max-content;
 }
 
 .left-content {
-    display: grid;
-    grid-template-columns: auto;
-    justify-content: flex-start;
-    align-items: center;
+  display: grid;
+  grid-template-columns: auto;
+  justify-content: flex-start;
+  align-items: center;
 }
 
 .top-left {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    gap: 16px;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  gap: 16px;
+}
+
+.right-content > .btn {
+  align-self: flex-end;
+  padding: 6px;
+  margin-left: 126px;
+  width: 30%;
 }
 
 .left-content > .top-left > .btn {
-    padding:6px;
+  padding: 6px;
 }
 
 .display-scores {
-    display: grid;
-    grid-template-columns: auto;
-    justify-content: flex-start;
-    border: 2px solid black;
-    padding: 10px;
-
+  display: grid;
+  grid-template-columns: auto;
+  justify-content: flex-start;
+  border: 2px solid black;
+  padding: 10px;
 }
 
 .right-content {
-    display: grid;
-    grid-template-columns: auto;
-    justify-content: space-between;
-    align-items: center;
-    gap: 18px;
-}
-
-.right-content> .btn {
-    align-self: flex-end;
-    padding: 6px;
-    margin-left: 126px;
-    width: 30%;
-
+  display: grid;
+  grid-template-columns: auto;
+  justify-content: space-between;
+  align-items: center;
+  gap: 18px;
 }
 
 .right-content > input {
-    border: 1px solid black;
+  border: 1px solid black;
 }
-
-
-
-
